Updating links to brainstem-org
Updated links

--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -1,11 +1,11 @@
 <!-- For iPhone -->
-<link rel="apple-touch-icon" href="https://petersenpeter.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon.png">
+<link rel="apple-touch-icon" href="https://brainstem-org.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon.png">
 
 <!-- For iPhone Retina display -->
-<link rel="apple-touch-icon" sizes="114x114" href="https://petersenpeter.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon114.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://brainstem-org.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon114.png">
 
 <!-- For iPad -->
-<link rel="apple-touch-icon" sizes="72x72" href="https://petersenpeter.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon72.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://brainstem-org.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon72.png">
 
 <!-- For iPad Retina display -->
-<link rel="apple-touch-icon" sizes="144x144" href="https://petersenpeter.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon144.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://brainstem-org.github.io/brainstem_support/assets/images/BrainSTEMLogoFavicon144.png">
