--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -76,7 +76,7 @@ layout: table_wrappers
       {% endif %}
     </nav>
     <footer class="site-footer">
-      Website by <a href="https://petersenlab.org/" target="_blank">Peter C. Petersen</a> & Rodrigo Amaducci
+      Website by <a href="https://petersenlab.org/" target="_blank">Peter C. Petersen</a>, Rodrigo Amaducci & Mingze Dou.
     </footer>
   </div>
   <div class="main" id="top">
