doc update on modules types and other fixes

--- a/docs/_includes/head_custom.html
+++ b/docs/_includes/head_custom.html
@@ -1,11 +1,7 @@
-<!-- For iPhone -->
-<link rel="apple-touch-icon" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon.png">
+<!-- For iPhone <link rel="apple-touch-icon" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon.png">-->
 
-<!-- For iPhone Retina display -->
-<link rel="apple-touch-icon" sizes="114x114" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon114.png">
+<!-- For iPhone Retina display <link rel="apple-touch-icon" sizes="114x114" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon114.png"> -->
 
-<!-- For iPad -->
-<link rel="apple-touch-icon" sizes="72x72" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon72.png">
+<!-- For iPad <link rel="apple-touch-icon" sizes="72x72" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon72.png"> -->
 
-<!-- For iPad Retina display -->
-<link rel="apple-touch-icon" sizes="144x144" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon144.png">
+<!-- For iPad Retina display <link rel="apple-touch-icon" sizes="144x144" href="https://support.brainstem.org/assets/images/BrainSTEMLogoFavicon144.png"> -->
